test/correct/EnumFloat.hs
main = ( take 10 [1.0 ..]
       , take 10 [1.0 ,3.0 ..]
       , [1.0 ,3.0 ..10.0 ]
       , [1.0 ..10.0]
       )
