test/typeerrors/Heuristics/UnifierFunctionBinding2.hs
test []     = 0
test (x:xs) = "hello" 
